--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,10 @@ input, textarea {
   :root{
       --container-width: 280px;
   }
+  .span{
+    display: block;
+    width: 100%;
+  }
 }
 
 section.download {
