--- a/css/style.css
+++ b/css/style.css
@@ -341,9 +341,10 @@ input, textarea {
   .span{
     display: block;
     width: 100%;
+    font-size: 40xp;
   }
   .get-started {
-    bottom: 40px;
+    bottom: 80px;
   }
 }
 
